tests/invalid/undefined_type.intent
module UndefinedTypeTest

entity Order {
  id: UUID
  customer: Customer
  items: List<LineItem>
}
